# auto_shooter

./: Cargo.toml  Cross.toml  README.md
.github/workflows/: build.yml
src/: main.rs  ui.rs
