[package]
name = "auto_shooter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.28.1"
enigo = { version = "0.2.1", features = ["wayland", "x11rb"], default-features = false }
tokio = { version = "1.40.0", features = ["full"] }
