[package]
name = "auto_shooter"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "2.1.0"
eframe = "0.30.0"
enigo = { version = "0.3.0", default-features = false, features = ["wayland", "x11rb"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
